--- a/frontend/css/types/inline.html
+++ b/frontend/css/types/inline.html
@@ -12,8 +12,10 @@
         the style attribute is used
         only on stryle attribute per element is allowed
         each style attribute can have any number of style/css properties
+        each style attribute sets a set of css properties for a single element
         style is a universal attribute
         has the highest priority 
+        Challenge with tyhe inline styling is that it is difficult to maintain as the code is redundant
     -->
     <!-- 
         A CSS property is always a key:value pair
