--- a/frontend/css/types/internal.html
+++ b/frontend/css/types/internal.html
@@ -5,9 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- 
+    Internal Style Sheets
+
+    all the css properties are put in the style tag in the head section
+    categorize the style properties
+    reduce the redundant code
+    the css properties can be applied to a range of elements within the page
+    leverage the concept of selectors
+    seperate the content from the CSS (HTML & CSS)
+    -->
+
+    <!-- 
+        A CSS property is always a key:value pair
+        multiple properties can be applied and are seperated with a semi-colon
+        the values for the style attribute have to be mentioned within double quotes
+        -->
+    <style>
+        /* this style is applied to all p elements  */
+        p {
+            color: red;
+            background-color: aqua;
+
+        }
+    </style>
 </head>
 
 <body>
+
+    <p>This paragraph is styled</p>
+    <p>This paragraph is styled</p>
+    <span>This is not styled</span>
+    <p>This paragraph is styled</p>
 
 </body>
 
