--- a/frontend/css/types/external1.html
+++ b/frontend/css/types/external1.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- the css file is linked to the html using the link tag -->
+    <!-- we can link multiple css files to a single html page -->
     <link rel="stylesheet" href="styles.css">
 </head>
 
