add id selector

--- a/frontend/css/selectors/class.html
+++ b/frontend/css/selectors/class.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <style>
         /* 
+        Most widely used selector type
         the class attribute always starts with a period "."
         a class selector can be applied to selected elements to which the properties are applicable */
 
