--- a/frontend/css/selectors/class.html
+++ b/frontend/css/selectors/class.html
@@ -15,6 +15,10 @@
             color: aliceblue;
             background-color: blue;
         }
+
+        .yourclass {
+            font-size: 1.5em;
+        }
     </style>
 </head>
 
@@ -23,6 +27,9 @@
     <h2 class="myclass">Applied selectively</h2>
     <p class="myclass">This styled</p>
     <p>This is not styled</p>
+
+    <!-- multiple classes can be applied to a single element seperated with a white space -->
+    <p class="myclass yourclass"></p>
 </body>
 
 </html>
