--- a/frontend/css/selectors/pseudoclass/nthchild1.html
+++ b/frontend/css/selectors/pseudoclass/nthchild1.html
@@ -6,13 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        tr:nth-child(odd) {
+        /* tr:nth-child(3) {
+            background-color: aqua;
+        } */
+        /* tr:first-child {
             background-color: aqua;
         }
 
-        tr:nth-child(even) {
-            background-color: orange;
+        tr:last-child {
+            background-color: red;
+        } */
+
+        tr:nth-child(odd) {
+            font-size: 1.5em;
         }
+
+
+        /* tr:nth-child(even) {
+            background-color: orange;
+        } */
     </style>
 </head>
 
