--- a/frontend/css/units/absolute.html
+++ b/frontend/css/units/absolute.html
@@ -7,20 +7,48 @@
     <title>Document</title>
     <style>
         /* the absolute units
-Unit	Name	Equivalent to
-cm	Centimeters	1cm = 37.8px = 25.2/64in
-mm	Millimeters	1mm = 1/10th of 1cm
-Q	Quarter-millimeters	1Q = 1/40th of 1cm
-in	Inches	1in = 2.54cm = 96px
-pc	Picas	1pc = 1/6th of 1in
-pt	Points	1pt = 1/72nd of 1in
-px	Pixels	1px = 1/96th of 1in
+        Unit	Name	Equivalent to
+        cm	Centimeters	1cm = 37.8px = 25.2/64in
+        mm	Millimeters	1mm = 1/10th of 1cm
+        Q	Quarter-millimeters	1Q = 1/40th of 1cm
+        in	Inches	1in = 2.54cm = 96px
+        pc	Picas	1pc = 1/6th of 1in
+        pt	Points	1pt = 1/72nd of 1in
+        px	Pixels	1px = 1/96th of 1in
         */
+
+        div {
+            height: 10cm;
+            width: 10cm;
+            background-color: blue;
+        }
+
+        p {
+            height: 200px;
+            width: 300px;
+            background-color: yellow;
+        }
     </style>
 </head>
 
 <body>
+    <!-- units are used in varios element styling
+            absolute units are to be used with 
+            width
+            height
+            margin
+            padding
+            font sizes....
+            ........  
+        
+        -->
 
+    <div>
+
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam dolorum tenetur laboriosam architecto corporis,
+        voluptatem vel ipsum iste quod alias, natus repellat suscipit beatae dolor similique ullam nesciunt. Temporibus,
+        architecto.</p>
 </body>
 
 </html>
