--- a/frontend/css/units/relative.html
+++ b/frontend/css/units/relative.html
@@ -7,8 +7,8 @@
     <title>Document</title>
     <!-- Relative units 
     %  - relative to the parent unit
-    em -- relative to the parent
-    rem  -- relative to the root element
+    em -- relative to the font size parent
+    rem  -- relative to the font size root element
     vw -- relative to view port width
     vh -- relative to view port height
     -->
