--- a/frontend/css/display/block.html
+++ b/frontend/css/display/block.html
@@ -13,10 +13,13 @@
         }
 
         .d1 {
+            position: fixed;
+            top: 20%;
+            left: 20%;
             width: 50%;
             height: 50%;
             border: 1px solid black;
-            margin: 25% auto 25% auto;
+            /* margin: 25% auto 25% auto; */
         }
     </style>
 </head>
