--- a/frontend/css/display/inline-block.html
+++ b/frontend/css/display/inline-block.html
@@ -10,7 +10,7 @@
         .d1 {
             display: inline-block;
             height: 20vh;
-            width: 20vh;
+            width: 20vw;
         }
 
         .d {
@@ -23,8 +23,14 @@
 
         .sd {
             display: inline-block;
-            width: 50%;
             height: 50%;
+            width: 50%;
+            /* 
+            Top margin of 25% means 25% of the container's width.
+            Right margin of 25% means 25% of the container's width.
+            Bottom margin of 25% means 25% of the container's width.
+            Left margin of 25% means 25% of the container's width. 
+            */
             margin: 25% 25%;
             background-color: beige;
         }
