add font awesome

--- a/frontend/css/bootstrap/demo.html
+++ b/frontend/css/bootstrap/demo.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="center">
-        <table class="table table-success table-striped">
+        <table class="table table-borderless">
             <thead>
                 <tr>
                     <th>Name</th>
