--- a/frontend/javascript/DOM/manipulation/access_elements/byclassname.html
+++ b/frontend/javascript/DOM/manipulation/access_elements/byclassname.html
@@ -17,12 +17,12 @@
     <div class="yourClass">Div 6</div>
 
     <script>
+        //  gets executed onLoad()
         const elements = document.getElementsByClassName('myClass'); // return an array with the elements set to the class "myClass"
         console.log(elements);
         for (let i = 0; i < elements.length; i++) {
             if (i % 2 == 0)
                 elements[i].style.color = "red"
-
         }
     </script>
 </body>
